<resources>
    <string name="app_name">MemeStudio</string>
    <string name="my_memes">My Memes</string>
    <string name="app_title">Create New Meme</string>
    <string name="lily">Lil-ify</string>
    <string name="me">Me Vs Me</string>
    <string name="theory">Theory</string>
    <string name="paint">paint</string>
    <string name="coffee">Drink Coffee</string>
    <string name="tennis">Play tennis</string>
    <string name="alcohol">One shot</string>
    <string name="meme_studio">Meme Studio</string>
    <string name="crying_jordan">Jordan</string>
</resources>
