<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/blush"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="80">

        <TextView
            android:id="@+id/createTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/meme_studio"
            android:textAllCaps="true"
            android:textSize="64dp"
            android:textStyle="bold|italic" />

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/newMeme"
            android:background="@color/cardview_dark_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom|end"
            app:srcCompat="@android:drawable/ic_input_add" />

    </FrameLayout>

    <TextView
        android:id="@+id/myMemes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="20"
        android:gravity="center"
        android:text="@string/my_memes"
        android:textSize="30sp" />


</LinearLayout>
