...
            android:text="@string/app_title"
            android:textSize="24sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Main_Meme_Fragment"
        android:layout_width="350dp"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="8"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/choose_type"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="horizontal">

...
